/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcor.schema;

option java_package = "com.futurewei.alcor.schema";
option java_outer_classname = "SecurityGroup";

import "common.proto";

message SecurityGroupConfiguration {
    uint32 revision_number = 1;

    string request_id = 2;
    string id = 3;
    MessageType update_type = 4; // DELTA (default) or FULL
    string vpc_id = 5;
    string name = 6;

    enum Direction {
        EGRESS = 0;
        INGRESS = 1;
    }

    message SecurityGroupRule {
        OperationType operation_type = 1;
        string security_group_id = 2;
        string id = 3;
        Direction direction = 4;
        EtherType ethertype = 5;
        Protocol protocol = 6;
        uint32 port_range_min = 7;
        uint32 port_range_max = 8;
        string remote_ip_prefix = 9;
        string remote_group_id = 10;
    }

    repeated SecurityGroupRule security_group_rules = 7;
}

message SecurityGroupState {
    OperationType operation_type = 1;
    SecurityGroupConfiguration configuration = 2;
}
